# gitvista

./: .claude-task.md  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  .mailmap  AGENTS.md  CI-CD-AUDIT-COMPLETE.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  FILES_CREATED.md  INTEGRATION_COMPLETE.md  LICENSE  Makefile  PLAN.md  QUICK_START.md  README.md  WORKFLOW.md  assets.go  fly.staging.toml  fly.toml  gitcli  gitvista.go  go.mod  go.sum  lefthook.yml  manifest-prompt.md  pyproject.toml  security_best_practices_report.md  skills-lock.json
.github/: BRANCH_PROTECTION.md  CI-CD-OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  README.md  dependabot.yml
docs/: ANALYTICS_V1_SPEC.md  ANALYTICS_V1_WORKTREE_PLAN.md  CLAUDE.md  PIPELINES.md  PLAN.md  TODO.md
gitcore/: blame.go  blame_test.go  cat_file.go  cat_file_test.go  commit_log.go  commit_log_test.go  diff_file.go  diff_test.go  diff_tree.go  diff_types.go  diff_worktree.go  gitcore.go  gitignore.go  gitignore_test.go  hash.go  hash_test.go  index.go  index_test.go  mailmap.go  mailmap_test.go  merge.go  merge_base.go  merge_base_test.go  merge_test.go  mmap_stub.go  mmap_test.go  mmap_unix.go  object_loader.go  object_parser.go  object_reader.go  object_types.go  objects.go  objects_test.go  pack.go  pack_index.go  pack_reader_test.go  pack_test.go  refs.go  refs_test.go  repository.go  (+18 more)
scripts/: benchmark_rev_list.py  create_merge_base_trap_repo.sh  create_status_trap_repo.sh  deploy-saas.sh  generate_doc2go_embed.sh  install.sh  prepare_test_repos.py  setup-hooks.sh  smoke-test.sh
web/: analyticsView.js  (+54 more)
(+268 files in other folders)
